# Software_dev

./: README.md
LR1/fclient/app/: build.gradle.kts
LR1/fclient/app/src/main/cpp/: native-lib.cpp
LR1/fclient/app/src/main/nativeLibs/x86_64/: CMakeCache.txt
LR1/fclient/app/src/main/res/layout/: activity_main.xml
LR2/lr2/app/: build.gradle.kts
LR2/lr2/app/src/main/: AndroidManifest.xml
LR2/lr2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LR2/lr2/app/src/main/res/layout/: activity_pinpad.xml
LR2/lr2/app/src/main/res/values/: themes.xml
LR2/lr2/gradle/: libs.versions.toml
LR2/lr2/gradle/wrapper/: gradle-wrapper.properties
LR3/lr3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/backend/: pom.xml
fclient/backend/front/: package-lock.json  package.json
fclient/backend/front/src/: App.css  App.js  index.js
fclient/backend/front/src/components/: ArtistComponent.jsx  ArtistListComponent.jsx  CountryComponent.jsx  CountryListComponent.jsx  Login.jsx  MuseumComponent.jsx  MuseumListComponent.jsx  MyAccountComponent.jsx  NavigationBar.jsx  PaintingComponent.jsx  PaintingListComponent.jsx  SideBar.jsx  UserComponent.jsx  UserListComponent.jsx
fclient/backend/front/src/services/: BackendService.jsx
fclient/backend/front/src/utils/: Rdx.jsx  Utils.jsx
fclient/backend/src/main/resources/: application.properties
fclient/fclient/app/: build.gradle.kts
fclient/fclient/app/src/main/: AndroidManifest.xml
fclient/fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/fclient/gradle/wrapper/: gradle-wrapper.properties
(+279 files in other folders)
